[package]
name = "sunrest"
version = "0.1.0"
edition = "2021"
description = "A simple NES emulator"
repository = "https://github.com/alanoliveira/sunrest"
authors = ["Alan Oliveira <alan.oliveira89@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
log = []
